@@ -1,5 +1,8 @@
 #This is a list of changes in pygame's history.
 
+Dec 3, 2000
+	fixed timing issues. negative time.delay() will become 0
+
 Nov 30, 2000
 	UserRect module added
 	all objects now have a matching type; SurfaceType, etc
